js/js.translator/testData/incremental/invalidationWithPL/moveSuspendFunctionBetweenModules/main/test.0.kt
import sample.foo

suspend fun test(): Int = foo()
